@@ -1,6 +1,7 @@
 meecast (0.7.7) unstable; urgency=low
 
   * Added icon for openweathermap.com 
+  * Tizen2 Fixed problem with temperature view
 
  -- Vlad Vasiliev <vlad@gas.by>  Mon, 16 Sep 2013 18:31:23 +0200
 
